fix layout issue when there are too many tabs opened

--- a/packages/legend-studio/style/components/_review.scss
+++ b/packages/legend-studio/style/components/_review.scss
@@ -30,6 +30,7 @@
 
     background: var(--color-dark-grey-80);
     flex: 1 0 auto;
+    width: calc(100% - 5rem);
   }
 
   &__content {
